--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.nanit</groupId>
     <artifactId>CustomSkinsManager</artifactId>
-    <version>2.0.3</version>
+    <version>2.0.4</version>
 
     <repositories>
         <repository>
@@ -101,6 +101,12 @@
             <groupId>ninja.leaping.configurate</groupId>
             <artifactId>configurate-hocon</artifactId>
             <version>3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.3.1</version>
         </dependency>
 
         <dependency>
