--- a/src/main/resources/configuration/bukkit/config.conf
+++ b/src/main/resources/configuration/bukkit/config.conf
@@ -10,9 +10,9 @@ bungeecord: false // Set to 'true' if you use bungeecord
 remoteDatabase: false // Set to true if you want to use remote database
 
 database{
-	type: "MySQL" //Available types MySQL, SQLite
+	type: "MySQL" // Available types MySQL, SQLite
 	host: "localhost"
-	port: 3306 //Port need only for MySQL
+	port: 3306 // Port needs only for MySQL
 	database: "test"
 	user: "root"
 	password: "password"
@@ -20,21 +20,21 @@ database{
 
 skins{
 	license{
-		period: 1 // Period of requests to mojang server in seconds.
+		period: 1 // Period of the requests to mojang server in seconds.
 	}
 
 	mineskin{
-		period: 3 // Period of requests to mineskin server in seconds. I don't recommend change this param.
+		period: 3 // Period of the requests to mineskin server in seconds. I don't recommend change this param.
 	}
 
-	// You can use you own license accounts as container for skin changes.
+	// You can use your own license accounts as container for skin changes.
 	// Check plugin page on spigotmc to get more information
 	// The more accounts, the more requests per second you can perform. Period of requests you can calculate:
 	// Period = 60/<count> seconds
 	mojang{
 		enable: false
-		period: 30 // Every 'N' seconds queue service will be request mojang server to upload custom skin
-		// This is a list of minecraft accounts. Just add you own account here
+		period: 30 // Every 'N' seconds queue service will request mojang server to upload custom skin
+		// This is a list of minecraft accounts. Just add your own account here
 		accounts:[
 			{
 				login: "example@mail.com"
@@ -47,9 +47,9 @@ skins{
 		]
 	}
 
-	// If player not have license skin, this skin will be default player skin
-	// This is a list. You can add few skins and it will be applied random
-	// If you not need a default skin, change this block to 'default:[]'
+	// If player does not have license skin, this skin will be default player skin
+	// This is a list. You can add few skins and it will be applied randomly
+	// If you don't need a default skin, change this block to 'default:[]'
 	default:[
 		{
 			name: "half-skin"
@@ -58,7 +58,7 @@ skins{
 		},
 	]
 
-	// Blacklist of the premium nicknames. Blacklist for url not exist because it's impossible, use whitelist for url
+	// Blacklist of the premium nicknames. Blacklist for url does not exist because it's impossible, use whitelist for url
 	blacklist{
 		enable: false
 		list:[
