--- a/src/main/resources/configuration/bukkit/menu.conf
+++ b/src/main/resources/configuration/bukkit/menu.conf
@@ -34,7 +34,7 @@ auto{
 	enable: true
 }
 
-// This menu can configured by yourself
+// You can configure this menu as you wish
 // If this menu enabled, auto menu will be disabled
 // Materials name you can find on this page: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Material.html
 custom{
