--- a/src/main/resources/lang/en.conf
+++ b/src/main/resources/lang/en.conf
@@ -6,14 +6,14 @@
 "player.skull.help": "&e/skull <player> &7- Get player head with skin"
 
 "skin.process": "&7In around &e%s&7 seconds your skin will be applied"
-"skin.success": "&aYour skin successful applied"
+"skin.success": "&aYour skin successfully applied"
 
 "skin.image.error": "&cAn error occurred while loading the skin. The link may be damaged or incorrectly specified"
-"skin.image.invalid": "&cLink not entered correctly. It should lead directly to the image in png format"
-"skin.image.success": "&aYour skin successful applied"
+"skin.image.invalid": "&cLink does not entered correctly. You haveto use direct link to image"
+"skin.image.success": "&aYour skin successfully applied"
 "skin.image.whitelist.not_exist": "&cThe link to the image you entered is not allowed on this server"
 
-"skin.name.invalid": "&cThe nickname you entered is not correct. A player with that name doesn't exactly exist"
+"skin.name.invalid": "&cThe nickname which you entered does't correct. A player with that name doesn't exist"
 "skin.name.error": "&cOh no, error! Perhaps a license account with such a login does not exist"
 "skin.name.success": "&aSkin of player &f&l%s &a successful applied"
 "skin.name.blacklist.exist": "&cNickname you entered is not allowed on this server"
@@ -26,7 +26,7 @@
 "npc.skin.impossible": "&cNot possible to apply skin for this NPC"
 
 "menu.title": "&0Choose skin"
-"menu.page.invalid": "&cThis page does not exist. Try opening the menu without specifying a page"
+"menu.page.invalid": "&cThis page does not exist. Try open the menu without specifying a page"
 
 "npc.name":[
 	"&eRMB - &aApply",
@@ -37,7 +37,7 @@ help:[
 	"",
 	"&e▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰ &7Custom Skins Manager&e ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰",
 	"&e/skin player <player> &7- Set skin from premium account",
-	"&e/skin url <url> [slim] &7- Set skin via link to image",
+	"&e/skin url <url> [slim] &7- Set skin via link to the image",
 	"&e/skin reset &7- Reset skin",
 	"&e/skin menu &7- Open skins menu to select it from already installed",
 	"",
