--- a/src/main/resources/configuration/bungee/config.conf
+++ b/src/main/resources/configuration/bungee/config.conf
@@ -19,20 +19,20 @@ database{
 
 skins{
 	license{
-		period: 1 // Period of requests to mojang server in seconds.
+		period: 1 // Period of the requests to mojang server in seconds.
 	}
 
 	mineskin{
-		period: 3 // Period of requests to mineskin server in seconds. I don't recommend change this param.
+		period: 3 // Period of the requests to mineskin server in seconds. I don't recommend change this param.
 	}
 
-	// You can use you own license accounts as container for skin changes.
+	// You can use your own license accounts as container for skin changes.
 	// Check plugin page on spigotmc to get more information
 	// The more accounts, the more requests per second you can perform. That <count> per minute;
 	mojang{
 		enable: false // If enable is true, MineSkin service will not be used
-		period: 30 // Every 'N' seconds queue service will be request mojang server to upload custom skin
-		// This is a list of minecraft accounts. Just add you own account here
+		period: 30 // Every 'N' seconds queue service will request mojang server to upload custom skin
+		// This is a list of minecraft accounts. Just add your own account here
 		accounts:[
 			{
 				login: "example@mail.com"
@@ -45,9 +45,9 @@ skins{
 		]
 	}
 
-	// If player not have license skin, this skin will be instead Steve or Alex
-	// This is a list. You can add few skins and it will be applied random
-	// If you not need a default skin, change this block to 'default:[]'
+	// If player does not have license skin, this skin will be instead Steve or Alex
+	// This is a list. You can add few skins and it will be applied randomly
+	// If you don't need a default skin, change this block to 'default:[]'
 	default:[
 		{
 			name: "half-skin"
@@ -56,7 +56,7 @@ skins{
 		},
 	]
 
-	// Blacklist of the premium nicknames. Blacklist for url not exist because it's impossible, use whitelist for url
+	// Blacklist of the premium nicknames. Blacklist for url does not exist because it's impossible, use whitelist for url
 	blacklist{
 		enable: false
 		list:[
