Reworked config, api and something else

--- a/src/main/resources/lang/ru_ru.conf
+++ b/src/main/resources/lang/ru_ru.conf
@@ -2,6 +2,7 @@
 
 "command.usage": "&cЭта команда пишется так: &f%s"
 "player.missing": "&cИгрок &f%s&c не найден"
+
 "player.skull.gived": "&7Выдана голова игрока &e%s"
 "player.skull.help": "&e/skull <игрок> &7- Получить голову игрока со скином"
 
@@ -10,22 +11,16 @@
 
 "skin.image.error": "&cВо время загрузки скина произошла ошибка. Возможно ссылка повреждена, или неверно указана"
 "skin.image.invalid": "&cСсылка введена не правильно. Она должна вести прямо к изображению в формате .png"
-"skin.image.success": "&aВаш скин успешно установлен"
-"skin.image.whitelist.not_exist": "&cСсылка на изображение которое вы ввели не разрешена на этом сервере"
 
 "skin.name.invalid": "&cВведеный вами ник не правильный. Игрока с таким именем точно не существует."
 "skin.name.error": "&cОшибка установки скина. Возможно лицензионного аккаунта с таким логином не существует"
-"skin.name.success": "&aСкин игрока &f&l%s&a успешно установлен"
-"skin.name.blacklist.exist": "&cНик который вы ввели не разрешен на этом сервере"
-"skin.name.whitelist.not_exist": "&cНик который вы ввели не разрешен в белом списке"
+
+"skin.unallowed": "&cНик который вы ввели не разрешен на этом сервере"
 
 "skin.reset.success": "&aВаш скин успешно сброшен на стандартный"
 "skin.reset.empty": "&eВы не устанавливали кастомный скин. Сбрасывать нечего"
 
-"npc.not_selected": "&cВы не выбрали ни одного NPC"
-"npc.skin.impossible": "&cНевозможно установить скин для этого NPC"
-
-"menu.title": "&0Выбор скина"
+"menu.title": "&lВыбор скина"
 "menu.page.invalid": "&cТакой страницы не существует. Попробуйте открыть меню без указания страницы"
 
 "npc.name":[
@@ -43,11 +38,4 @@ help:[
 	"",
 	"&7Чтобы установить скин, вам нужно загрузить любой скин на хостинг изображений, по типу &eimgur.com&7, скопировать прямую ссылку на изображение, и вставить сюда.",
 	"",
-]
-
-admin:[
-	"&e▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰ &7CSM (Admin)&e ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰",
-	"&e/skin to <цель> player <имя с лицензии> &7- Установить скин игрока <имя с лицензии> игроку <цель>",
-	"&e/skin to <цель> url <ссылка на изображение> &7- Установить скин по ссылке игроку <цель>",
-	"&e/skin reset <цель> &7- Сбросить скин игроку <цель>",
 ]
