--- a/csm-api/build.gradle
+++ b/csm-api/build.gradle
@@ -8,8 +8,10 @@ dependencies {
     compile files('lib/configurate-hocon-3.7.jar')
 
     compileOnly 'com.google.guava:guava:13.0-rc1'
+    compileOnly 'com.google.code.gson:gson:2.8.5'
+
+    compile 'com.h2database:h2:1.4.197'
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
-    compile 'com.google.code.gson:gson:2.8.5'
     compile 'commons-io:commons-io:2.4'
     compile 'org.apache.commons:commons-lang3:3.0'
 }
