--- a/csm-bukkit/build.gradle
+++ b/csm-bukkit/build.gradle
@@ -7,7 +7,7 @@ dependencies {
 
     compileOnly project(":csm-api")
 
-    compileOnly files('lib/spigot-1.13.2.jar')
+    compileOnly fileTree('lib/')
 
     compileOnly 'com.comphenix.protocol:ProtocolLib:4.4.0'
     compile 'com.github.tr7zw.Item-NBT-API:item-nbt-api:2.1.1'
