--- a/csm-bukkit/src/main/resources/bukkit/config.conf
+++ b/csm-bukkit/src/main/resources/bukkit/config.conf
@@ -1,16 +1,20 @@
 #
-# Custom Skins Manager configuration
+# Custom Skins Manager сonfiguration
 #            (Spigot)
 #
 
 # This a name of the language file in /lang folder
 # You can create your own language file. But we've prepared following languages:
-# en - English
-# ru - Russian
-language: "en"
+# en_us - English (US)
+# ru_ru - Russian
+language: "en_us"
 
 # Configure database credentials to store all skin data
 # By default plugin uses H2 local database
+# Available database types:
+# - H2
+# - SQLite
+# - MySQL
 database{
 	type: "H2"
 	host: "localhost"
