--- a/src/main/resources/lang/en_us.conf
+++ b/src/main/resources/lang/en_us.conf
@@ -2,6 +2,7 @@
 
 "command.usage": "&cYou can use this command like this: &f%s"
 "player.missing": "&cPlayer &f%s&c not found"
+
 "player.skull.gived": "&7Gave head of player &e%s"
 "player.skull.help": "&e/skull <player> &7- Get player head with skin"
 
@@ -9,21 +10,15 @@
 "skin.success": "&aYour skin successfully applied"
 
 "skin.image.error": "&cAn error occurred while loading the skin. The link may be damaged or incorrectly specified"
-"skin.image.invalid": "&cLink does not entered correctly. You haveto use direct link to image"
-"skin.image.success": "&aYour skin successfully applied"
-"skin.image.whitelist.not_exist": "&cThe link to the image you entered is not allowed on this server"
+"skin.image.invalid": "&cLink does not entered correctly. You have to use direct link to image"
 
-"skin.name.invalid": "&cThe nickname which you entered does't correct. A player with that name doesn't exist"
 "skin.name.error": "&cOh no, error! Perhaps a license account with such a login does not exist"
-"skin.name.success": "&aSkin of player &f&l%s &a successful applied"
-"skin.name.blacklist.exist": "&cNickname you entered is not allowed on this server"
-"skin.name.whitelist.not_exist": "&cNickname you entered is not allowed in the white list"
+"skin.name.invalid": "&cThe nickname which you entered does't correct. A player with that name doesn't exist"
+
+"skin.unallowed": "&cThat name of the player is not allowed on this server"
 
 "skin.reset.success": "&aYour skin has been reset"
 "skin.reset.empty": "&eYou don't have custom skin"
-
-"npc.not_selected": "&cNPC is not selected"
-"npc.skin.impossible": "&cNot possible to apply skin for this NPC"
 
 "menu.title": "&0Choose skin"
 "menu.page.invalid": "&cThis page does not exist. Try open the menu without specifying a page"
@@ -43,11 +38,4 @@ help:[
 	"",
 	"&7To set the skin, you need to upload your skin to the image hosting like &eimgur.com&7, copy the direct link to the image, and paste it here",
 	"",
-]
-
-admin:[
-	"&e▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰ &7CSM (Admin)&e ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰",
-	"&e/skin to <target> player <premium name> &7- Remote set skin from <premium name> to <target>",
-	"&e/skin to <target> url <image link> &7- Set skin via image link for player <target>",
-	"&e/skin reset <target> &7- Reset skin for player <target>",
 ]
