--- a/csm-bukkit/src/main/resources/plugin.yml
+++ b/csm-bukkit/src/main/resources/plugin.yml
@@ -1,12 +1,10 @@
 name: 'CustomSkinsManager'
 main: 'ru.csm.bukkit.Skins'
-version: '2.0.7'
+version: '3.0'
 api-version: '1.13'
 author: '_Nanit_'
 depend:
   - "ProtocolLib"
-softdepend:
-  - "Citizens"
 commands:
   csm:
     description: 'Custom Skins Manager main command'
@@ -24,11 +22,9 @@ permissions:
     description: "Allow to open menu with users skins"
   csm.skin.reset:
     description: "Allow to reset skin to default"
-  csm.skin.npc:
-    description: "Allow to set skin via url for Citizens NPC's"
   csm.skin.to:
     description: "Allow to setup skins for any player"
   csm.admin:
     description: "Allow to use '/csm reload' command. More information see on spigotmc"
   csm.skulls:
-    description: "Allow to use '/skull <player>' command. More information see on spigotmc"
+    description: "Allow to use '/skull <player>' command. More information see on spigotmc".
