--- a/csm-api/build.gradle
+++ b/csm-api/build.gradle
@@ -9,9 +9,9 @@ dependencies {
 
     compileOnly 'com.google.guava:guava:13.0-rc1'
     compileOnly 'com.google.code.gson:gson:2.8.5'
+    compileOnly 'commons-io:commons-io:2.4'
+    compileOnly 'org.apache.commons:commons-lang3:3.0'
 
     compile 'com.h2database:h2:1.4.197'
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
-    compile 'commons-io:commons-io:2.4'
-    compile 'org.apache.commons:commons-lang3:3.0'
 }
