--- a/src/main/resources/lang/en_us.conf
+++ b/src/main/resources/lang/en_us.conf
@@ -20,8 +20,13 @@
 "skin.reset.success": "&aYour skin has been reset"
 "skin.reset.empty": "&eYou don't have custom skin"
 
-"menu.title": "&0Choose skin"
-"menu.page.invalid": "&cThis page does not exist. Try open the menu without specifying a page"
+"menu.empty": "&cSkins menu is empty"
+"menu.title": "&lChoose skin"
+"menu.btn.head.name": "&e%player%'s skin"
+"menu.btn.head.lore": "&7Click, to show skin preview"
+"menu.btn.prev.name": "&e<<"
+"menu.btn.next.name": "&e>>"
+"menu.btn.reset.name": "&cReset skin"
 
 "npc.name":[
 	"&eRMB - &aApply",
