--- a/src/main/resources/lang/ru_ru.conf
+++ b/src/main/resources/lang/ru_ru.conf
@@ -20,8 +20,13 @@
 "skin.reset.success": "&aВаш скин успешно сброшен на стандартный"
 "skin.reset.empty": "&eВы не устанавливали кастомный скин. Сбрасывать нечего"
 
+"menu.empty": "&cМеню для выбора скина пустое"
 "menu.title": "&lВыбор скина"
-"menu.page.invalid": "&cТакой страницы не существует. Попробуйте открыть меню без указания страницы"
+"menu.btn.head.name": "&eСкин %player%"
+"menu.btn.head.lore": "&7Нажмите, чтобы посмотреть скин полностью"
+"menu.btn.prev.name": "&e<<"
+"menu.btn.next.name": "&e>>"
+"menu.btn.reset.name": "&cСбросить скин"
 
 "npc.name":[
 	"&eПКМ - &aУстановить",
