--- a/csm-api/build.gradle
+++ b/csm-api/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
 
     compile files('lib/configurate-hocon-3.7.jar')
 
