--- a/src/main/resources/lang/en_us.conf
+++ b/src/main/resources/lang/en_us.conf
@@ -3,8 +3,7 @@
 "command.usage": "&cYou can use this command like this: &f%s"
 "player.missing": "&cPlayer &f%s&c not found"
 
-"player.skull.gived": "&7Gave head of player &e%s"
-"player.skull.help": "&e/skull <player> &7- Get player head with skin"
+"player.skull.received": "&7Hold your head"
 
 "skin.process": "&7In around &e%s&7 seconds your skin will be applied"
 "skin.success": "&aYour skin successfully applied"
@@ -40,6 +39,8 @@ help:[
 	"&e/skin url <url> [slim] &7- Set skin via link to the image",
 	"&e/skin reset &7- Reset skin",
 	"&e/skin menu &7- Open skins menu to select it from already installed",
+	"&e/skull player <player> &7- Get head with player skin",
+	"&e/skull url <url> &7- Get the head with the skin from the specified image",
 	"",
 	"&7To set the skin, you need to upload your skin to the image hosting like &eimgur.com&7, copy the direct link to the image, and paste it here",
 	"",
