--- a/src/main/resources/lang/ru_ru.conf
+++ b/src/main/resources/lang/ru_ru.conf
@@ -3,8 +3,7 @@
 "command.usage": "&cЭта команда пишется так: &f%s"
 "player.missing": "&cИгрок &f%s&c не найден"
 
-"player.skull.gived": "&7Выдана голова игрока &e%s"
-"player.skull.help": "&e/skull <игрок> &7- Получить голову игрока со скином"
+"player.skull.received": "&7Голова получена"
 
 "skin.process": "&7В течении &e%s&7 секунд ваш скин будет установлен"
 "skin.success": "&aСкин успешно установлен"
@@ -40,6 +39,8 @@ help:[
 	"&e/skin url <url> [slim] &7- Установить скин используя ссылку на изображение",
 	"&e/skin reset &7- Сбросить скин на дефолтный",
 	"&e/skin menu &7- Открыть меню для выбора скина из уже установленных игроками",
+	"&e/skull player <player> &7- Получить голову со скином игрока",
+	"&e/skull url <url> &7- Получить голову со скином из указанной картинки",
 	"",
 	"&7Чтобы установить скин, вам нужно загрузить любой скин на хостинг изображений, по типу &eimgur.com&7, скопировать прямую ссылку на изображение, и вставить сюда.",
 	"",
