--- a/csm-api/build.gradle
+++ b/csm-api/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
+    testCompile 'com.google.code.gson:gson:2.8.5'
 
     compile files('lib/configurate-hocon-3.7.jar')
 
