Fixed skull command

--- a/csm-api/src/main/resources/lang/en_us.conf
+++ b/csm-api/src/main/resources/lang/en_us.conf
@@ -1,6 +1,6 @@
-"permission.deny": "&cYou don't have permission for this"
+"permission.deny": "&cYou don't have permission for that"
 
-"command.usage": "&cYou can use this command like this: &f%s"
+"command.usage": "&cYou should use this command like this: &f%s"
 "player.missing": "&cPlayer &f%s&c not found"
 
 "player.skull.received": "&7Hold your head"
@@ -9,10 +9,10 @@
 "skin.success": "&aYour skin successfully applied"
 
 "skin.image.error": "&cAn error occurred while loading the skin. The link may be damaged or incorrectly specified"
-"skin.image.invalid": "&cLink does not entered correctly. You have to use direct link to image"
+"skin.image.invalid": "&cLink in invalid. You have to use direct link to image"
 
-"skin.name.error": "&cOh no, error! Perhaps a license account with such a login does not exist"
-"skin.name.invalid": "&cThe nickname which you entered does't correct. A player with that name doesn't exist"
+"skin.name.error": "&cOh no, error! Maybe a premium account with such name doesn't have skin"
+"skin.name.invalid": "&cThe nickname which you entered is invalid"
 
 "skin.unallowed": "&cThat name of the player is not allowed on this server"
 
