--- a/csm-bungee/src/main/resources/bungee.yml
+++ b/csm-bungee/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
 name: 'CustomSkinsManager'
-main: 'ru.csm.bungee.Skins'
+main: 'ru.csm.bungee.BungeeSkinsManager'
 version: '3.0'
 author: '_Nanit_'
