Added skin restoring option. Added default skin updating. Fixed second layer on join

--- a/csm-bungee/src/main/resources/bungee/config.conf
+++ b/csm-bungee/src/main/resources/bungee/config.conf
@@ -23,6 +23,12 @@ database{
 	password: "password"
 }
 
+# Set to 'false' if you need to disable skin restoring on offline-mode servers
+restoreSkins: true
+
+# Set to 'true' if you need to update player's default (premium) skin on join
+updateDefaultSkin: false
+
 # This is a list of default skins for players who do not have their own (steve, alex)
 # You can add new items to this list. Skins will be assigned randomly.
 defaultSkins:[
