--- a/csm-bukkit/src/main/resources/bukkit/config.conf
+++ b/csm-bukkit/src/main/resources/bukkit/config.conf
@@ -7,6 +7,7 @@
 # You can create your own language file. But we've prepared following languages:
 # en_us - English (US)
 # ru_ru - Russian
+# es_es - Spanish
 language: "en_us"
 
 # Configure database credentials to store all skin data
