--- a/csm-bungee/src/main/resources/bungee/config.conf
+++ b/csm-bungee/src/main/resources/bungee/config.conf
@@ -7,6 +7,7 @@
 # You can create your own language file. But we've prepared following languages:
 # en_us - English (US)
 # ru_ru - Russian
+# es_es - Spanish
 language: "en_us"
 
 # Configure database credentials to store all skin data
