Fixed health scale bug. Using bukkit/proxy threads for async calls. Fixed resource pack issue. Removed trash

--- a/csm-bukkit/build.gradle
+++ b/csm-bukkit/build.gradle
@@ -33,4 +33,6 @@ dependencies {
 
     compileOnly project(":csm-api")
     compileOnly fileTree('lib/')
+
+    compile files('lib/napi-reflection-1.0.jar')
 }
