--- a/csm-api/build.gradle
+++ b/csm-api/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     testCompile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
     testCompile 'com.google.code.gson:gson:2.8.5'
 
-    compile files('lib/configurate-hocon-3.7.jar')
+    compile files('lib/napi-configurate-yaml-1.0.jar')
 
     compileOnly 'com.google.guava:guava:13.0-rc1'
     compileOnly 'com.google.code.gson:gson:2.8.5'
