--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 allprojects {
@@ -24,6 +25,10 @@ dependencies {
     compile project(":csm-bukkit")
     compile project(":csm-bungee")
     compile project(":csm-velocity")
+}
+
+shadowJar{
+    minimize()
 }
 
 jar {
