--- a/csm-api/build.gradle
+++ b/csm-api/build.gradle
@@ -23,15 +23,13 @@ plugins {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
-    testCompile 'com.google.code.gson:gson:2.8.5'
 
     compile files('lib/napi-configurate-yaml-1.0.jar')
-
-    compileOnly 'com.google.guava:guava:13.0-rc1'
-    compileOnly 'com.google.code.gson:gson:2.8.5'
-    compileOnly 'commons-io:commons-io:2.4'
-    compileOnly 'org.apache.commons:commons-lang3:3.0'
-
-    compile 'com.h2database:h2:1.4.197'
+    compile group: 'com.h2database', name: 'h2', version: '1.4.200'
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+
+    compileOnly group: 'com.google.guava', name: 'guava', version: '13.0-rc1'
+    compileOnly group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compileOnly group: 'commons-io', name: 'commons-io', version: '2.4'
+    compileOnly group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 }
