--- a/csm-bungee/src/main/resources/bungee.yml
+++ b/csm-bungee/src/main/resources/bungee.yml
@@ -2,3 +2,7 @@ name: 'CustomSkinsManager'
 main: 'ru.csm.bungee.BungeeSkinsManager'
 version: '3.6.3'
 author: '_Nanit_'
+
+libraries:
+  - "org.apache.commons:commons-dbcp2:2.8.0"
+  - "com.h2database:h2:1.4.200"
