--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,14 @@ allprojects {
 }
 
 dependencies {
-    compile project(":csm-api")
-    compile project(":csm-bukkit")
-    compile project(":csm-bungee")
-    compile project(":csm-velocity")
+    implementation project(":csm-api")
+    implementation project(":csm-bukkit")
+    implementation project(":csm-bungee")
+    implementation project(":csm-velocity")
 }
 
 jar {
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
