--- a/csm-bukkit/build.gradle
+++ b/csm-bukkit/build.gradle
@@ -21,9 +21,7 @@ plugins {
 }
 
 repositories {
-    maven {
-        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
-    }
+    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
 
 dependencies {
@@ -32,7 +30,7 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.10.5'
 
     compileOnly project(":csm-api")
-    compileOnly fileTree('lib/')
+    compileOnly fileTree('lib/spigot/')
 
     compile files('lib/napi-reflection-1.0.jar')
     compile files('lib/napi-commands-bukkit-1.0.jar')
